[gd_scene load_steps=2 format=3 uid="uid://baqmwkxl5jxym"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_wa6le"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_wa6le")

[node name="FPSLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 47.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="AmmoLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.323
anchor_top = 0.89
anchor_right = 0.323
anchor_bottom = 0.89
offset_left = -42.72
offset_top = -22.4
offset_right = 42.28
offset_bottom = 22.6
grow_horizontal = 2
grow_vertical = 0
text = "wall"

[node name="Button2" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.69
anchor_top = 0.893
anchor_right = 0.69
anchor_bottom = 0.893
offset_left = -44.6
offset_top = -21.48
offset_right = 44.4
offset_bottom = 21.52
grow_horizontal = 0
grow_vertical = 0
text = "drill"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
